--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/gNikro/AshesUDK">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Etherlords/AshesUDK">View on GitHub</a>
 
           <h1 id="project_title">Ashesudk</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/gNikro/AshesUDK/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/gNikro/AshesUDK/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Etherlords/AshesUDK/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Etherlords/AshesUDK/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Ashesudk maintained by <a href="https://github.com/gNikro">gNikro</a></p>
+        <p class="copyright">Ashesudk maintained by <a href="https://github.com/Etherlords">Etherlords</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
